--- a/TestIndex.html
+++ b/TestIndex.html
@@ -34,7 +34,7 @@
   <div class="container text-center ">
 	<div class="jumbotron mt-5">
 		<h1>Foodmate</h1>
-		<p>Catchy advertising slogan!</p>
+		<p>We make it easy to eat!</p>
 		<a href="login.html" class ="btn btn-secondary" role="button">Try it Yourself!</a>
 	</div>
   </div>
