--- a/generate.html
+++ b/generate.html
@@ -41,7 +41,7 @@
 </header>
 	<div class="row mx-auto text-center mt-5">
 		<div class="col-sm">
-			<span class="h1">Manage Inventory</span>
+			<span class="h1">Generate Recipe</span>
 		</div>
 	</div>
   
@@ -51,30 +51,30 @@
 			<form class="" action="#">
 				<div class="form-group form-inline justify-content-center">
 					<input type="text" class="form-control mt-1" id="password" value="Bread">
-					<a href="#" class="btn btn-secondary ml-1" role="button">Delete</a>
+					<a href="#" class="btn btn-secondary ml-1" role="button">Add</a>
 				</div>
 				<div class="form-group form-inline justify-content-center">
 					<input type="text" class="form-control mt-1" id="password" value="Milk">
-					<a href="#" class="btn btn-secondary ml-1" role="button">Delete</a>
+					<a href="#" class="btn btn-secondary ml-1" role="button">Add</a>
 				</div>
 				<div class="form-group form-inline justify-content-center">
 					<input type="text" class="form-control mt-1" id="password" value="Cheese">
-					<a href="#" class="btn btn-secondary ml-1" role="button">Delete</a>
+					<a href="#" class="btn btn-secondary ml-1" role="button">Add</a>
 				</div>
 				<div class="form-group form-inline justify-content-center">
 					<input type="text" class="form-control mt-1" id="password">
-					<a href="#" class="btn btn-secondary ml-1" role="button">Delete</a>
+					<a href="#" class="btn btn-secondary ml-1" role="button">Add</a>
 				</div>
 				<div class="form-group form-inline justify-content-center">
 					<input type="text" class="form-control mt-1" id="password">
-					<a href="#" class="btn btn-secondary ml-1" role="button">Delete</a>
+					<a href="#" class="btn btn-secondary ml-1" role="button">Add</a>
 				</div>
 				<div class="form-group form-inline justify-content-center">
 					<input type="text" class="form-control mt-1" id="password">
-					<a href="#" class="btn btn-secondary ml-1" role="button">Delete</a>
+					<a href="#" class="btn btn-secondary ml-1" role="button">Add</a>
 				</div>
 			</form>
-			<a href="form.html" class ="btn btn-secondary" role="button">Add</a>
+	
 		</div>
 	</div>
   </div>
@@ -84,30 +84,30 @@
 			<form class="" action="#">
 				<div class="form-group form-inline justify-content-center">
 					<input type="text" class="form-control mt-1" id="password" value="Plain Flour">
-					<a href="#" class="btn btn-secondary ml-1" role="button">Delete</a>
+					<a href="#" class="btn btn-secondary ml-1" role="button">Add</a>
 				</div>
 				<div class="form-group form-inline justify-content-center">
 					<input type="text" class="form-control mt-1" id="password" value="jasmine rice">
-					<a href="#" class="btn btn-secondary ml-1" role="button">Delete</a>
+					<a href="#" class="btn btn-secondary ml-1" role="button">Add</a>
 				</div>
 				<div class="form-group form-inline justify-content-center ">
 					<input type="text" class="form-control mt-1" id="password" value="pasta spirals">
-					<a href="#" class="btn btn-secondary ml-1" role="button">Delete</a>
+					<a href="#" class="btn btn-secondary ml-1" role="button">Add</a>
 				</div>
 				<div class="form-group form-inline justify-content-center">
 					<input type="text" class="form-control mt-1" id="password">
-					<a href="#" class="btn btn-secondary ml-1" role="button">Delete</a>
+					<a href="#" class="btn btn-secondary ml-1" role="button">Add</a>
 				</div>
 				<div class="form-group form-inline justify-content-center">
 					<input type="text" class="form-control mt-1" id="password">
-					<a href="#" class="btn btn-secondary ml-1" role="button">Delete</a>
+					<a href="#" class="btn btn-secondary ml-1" role="button">Add</a>
 				</div>
 				<div class="form-group form-inline justify-content-center">
 					<input type="text" class="form-control mt-1" id="password">
-					<a href="#" class="btn btn-secondary ml-1" role="button">Delete</a>
+					<a href="#" class="btn btn-secondary ml-1" role="button">Add</a>
 				</div>
 			</form>
-			<a href="form.html" class ="btn btn-secondary" role="button">Add</a>
+			<a href="recipe-g.html" class ="btn btn-secondary" role="button">Generate</a>
 		</div>
 	</div>
   </div>
@@ -131,8 +131,3 @@
 </nav>
   </body>
 </html>
-
-
-
-
-
