--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 	<meta name="viewport" content="720, initial-scale=1">
   </head>
   <body>
-  <nav class="navbar  bg-dark navbar-dark">
-	<a class="navbar-brand" href="#">Foodmate</a>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+	<a class="navbar-brand" href="TestIndex.html">Foodmate</a>
 	<ul class="navbar-nav ml-auto">
 		<li class="nav-item active">
 			<a class="nav-link" href="#">Login</a>
@@ -28,15 +28,14 @@
 		</li>
 	</ul>
   </nav>
-  <div class="container text-center ">
+      <div class="container text-center ">
 	<div class="jumbotron mt-5">
 		<h1>Foodmate</h1>
-		<p>Catchy advertising slogan!</p>
+		<p>We make it easy to eat!</p>
 		<a href="login.html" class ="btn btn-secondary" role="button">Try it Yourself!</a>
 	</div>
   </div>
-  
-  <div class="container mb-5 mt-5">
+  <div class="container mb-4 mt-4">
 	<div class="row">
 		<p></p>
 	</div>
@@ -45,7 +44,7 @@
 			<div class="card border-dark mx-auto" style="width:300px">
 			  <img class="card-img-top" src="img/recipe1.jpg" alt="Card image">
 			  <div class="card-body">
-				<h4 class="card-title">Lorem ipsum</h4>
+				<h4 class="card-title">Breakfast</h4>
 				<p class="card-text"> dolor sit amet, consectetur adipiscing elit. Integer aliquam ante auctor eleifend euismod. Suspendisse vitae enim aliquam, hendrerit est sed, venenatis justo. Etiam vitae velit metus.</p>
 				<a href="recipe-x.html" class="btn btn-secondary">More</a>
 			  </div>
