--- a/login.html
+++ b/login.html
@@ -40,7 +40,9 @@
 				<input type="password" class="form-control" id="password">
 			</div>
 			<!-- <button type="submit" class="btn btn-secondary">Submit</button> -->
-			<a href="user.html" class ="btn btn-secondary" role="button">Submit</a>
+				<div class="col-sm mx-auto">
+		<a href="user.html" class ="btn btn-secondary" role="button">Submit</a>
+	</div>
 		</form>
 	</div>
   </div>
