--- a/recipe-g.html
+++ b/recipe-g.html
@@ -17,62 +17,61 @@
     <header>
 		<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
 		<div class="dropdown">
-			<button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" 
-			data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> My Foodmate </button>
+			<button class="btn btn-secondary dropdown-toggle" type="button" 
+			id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">My Foodmate</button>
 				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
 			<button class="btn btn-secondary dropdown-toggle" type="button" 
-			id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> My Recipes</button>
+			id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">My Recipes</button>
 				<a class="dropdown-item" href="recipe-manage.html">My Recipes</a>
 				<a class="dropdown-item" href="recipe-new.html">Add new recipe</a>
-	
 			<button class="btn btn-secondary dropdown-toggle" type="button" 
-			id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> My Shopping Lists</button>
+			id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">My Shopping Lists</button>
 				<a class="dropdown-item" href="shopping-manage.html">Shopping Lists</a>
 				<a class="dropdown-item" href="shopping-new.html">New Shopping List </a>
-	
-			 <button class="btn btn-secondary dropdown-toggle" type="button" 
-			  id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Inventory</button>
+			<button class="btn btn-secondary dropdown-toggle" type="button" 
+			id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Inventory</button>
 				<a class="dropdown-item" href="inventory-manage.html">Fridge and Pantry</a>
 				<a class="dropdown-item" href="generate.html">Generate Recipe</a>
+			</div>
 		</div>
-	</div>
 	<ul class="navbar-nav ml-auto">
 			<a href="TestIndex.html"style="width:50px"><img class="card-img-top" src="img/foodmatelogo.png" alt="Card image"></a>
 	</ul>
-  </nav>
-    </header>
-  
+  </nav>  		
+</header>
   
 	<div class="row">
 	  <div class="container mt-5">
-			<span class="h1"><p>A Grand Feast</span>
-			<span class="float-right">31/02/2018</p></span>
+			<span class="h1"><p>Spicy Pork Larb with Chilli Sauce</p></span>
+			<span class="h2">Ingredients:</span>
 			 <ul class="list-group mt-3 mb-3">
 				<li class="list-group-item">1 cup jasmine rice</li>
 				<li class="list-group-item">2 carrots</li>
 				<li class="list-group-item">3 long red chillies</li>
-				<li class="list-group-item">Vegetable Oil</li>
-				<li class="list-group-item">500g pork mince</li>
-				<li class="list-group-item">1 bunch choy sum</li>
-				<li class="list-group-item">fish sauce</li>
-				<li class="list-group-item">honey</li>
-				<li class="list-group-item">1 lime</li>
-				<li class="list-group-item">3 eschalots</li>
-				<li class="list-group-item">mint leaves</li>
-				<li class="list-group-item">basil leaves</li>
 			</ul> 
-			<div class="container mb-4">
-				<a href="#" class ="btn btn-secondary " role="button">Export</a>
-				<a href="javascript:history.back()" class="btn btn-secondary" role="button">Return</a>
+			<span class="h2">Method</br></span>
+			<div class="pl-3">
+				<p><b>Step 1:</b></br>
+				Cook the rice following packet directions. </p>
+				<p><b>Step 2:</b></br>
+				Using the julienne attachment on a food processor or a sharp knife, cut carrots into matchsticks. Transfer to a medium bowl. Add coriander and sesame seeds. 
+				Season with salt and pepper. Toss to combine. </p>
+				<p><b>Step 3:</b></br>
+				Heat oil in a large frying pan over medium-high heat. Add mince. Cook, breaking up lumps with a wooden spoon, for 5 to 7 minutes or until browned. Add choy sum,
+				fish sauce and 1 chopped chilli. Cook, stirring, for 1 minute. Remove from heat. </p>
+			</div>
+			<div class="container mx-auto text-center">
+				<a href="javascript:history.back()" class ="btn btn-secondary mx-auto text-center" role="button">Return</a>
 			</div>
 		</div>
 	</div>
 	
   </div>
-    <nav>
+    </div>
+  <nav>
 <ul class="nav justify-content-center">
   <li class="nav-item">
-    <a class="nav-link" href="user.html">My Foodmate</a>
+    <a class="nav-link active" href="#">Recipe</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="recipe-manage.html">Recipes</a>
@@ -82,18 +81,13 @@
   </li>
   <li class="nav-item">
     <a class="nav-link" href="inventory-manage.html">Inventory</a>
-  </li>
-    </li>
+	  </li>
     <li class="nav-item">
     <a class="nav-link" href="generate.html">Generate Recipe</a>
+  </li>
   </li>
 </ul>
 </div>
 </nav>
   </body>
 </html>
-
-
-
-
-
