--- a/shopping-manage.html
+++ b/shopping-manage.html
@@ -14,14 +14,31 @@
 	<meta name="viewport" content="720, initial-scale=1">
   </head>
   <body>
-  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-	<a class="navbar-brand" href="TestIndex.html">Foodmate</a>
+    <header>
+		<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+		<div class="dropdown">
+			<button class="btn btn-secondary dropdown-toggle" type="button" 
+			id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">My Foodmate</button>
+				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+			<button class="btn btn-secondary dropdown-toggle" type="button" 
+			id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">My Recipes</button>
+				<a class="dropdown-item" href="recipe-manage.html">My Recipes</a>
+				<a class="dropdown-item" href="recipe-new.html">Add new recipe</a>
+			<button class="btn btn-secondary dropdown-toggle" type="button" 
+			id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">My Shopping Lists</button>
+				<a class="dropdown-item" href="shopping-manage.html">Shopping Lists</a>
+				<a class="dropdown-item" href="shopping-new.html">New Shopping List </a>
+			<button class="btn btn-secondary dropdown-toggle" type="button" 
+			id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Inventory</button>
+				<a class="dropdown-item" href="inventory-manage.html">Fridge and Pantry</a>
+				<a class="dropdown-item" href="generate.html">Generate Recipe</a>
+			</div>
+		</div>
 	<ul class="navbar-nav ml-auto">
-		<li class="nav-item active">
-			<span class="navbar-text">Username</span>
-		</li>
+			<a href="TestIndex.html"style="width:50px"><img class="card-img-top" src="img/foodmatelogo.png" alt="Card image"></a>
 	</ul>
-  </nav>
+  </nav>  		
+</header>
   <div class="container mt-5">
   <div class="row">
 	<div class="col-sm-8">
@@ -56,7 +73,27 @@
 		<a href="user.html" class ="btn btn-secondary" role="button">Return</a>
 	</div>
   </div>
-  
+    <nav>
+<ul class="nav justify-content-center">
+  <li class="nav-item">
+    <a class="nav-link" href="user.html">My Foodmate</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="recipe-manage.html">Recipes</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="shopping-x.html">Shopping Lists</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="inventory-manage.html">Inventory</a>
+  </li>
+    </li>
+    <li class="nav-item">
+    <a class="nav-link" href="generate.html">Generate Recipe</a>
+  </li>
+</ul>
+</div>
+</nav>
   </body>
 </html>
 
